<resources>
    <string name="app_name">Quiz GAme</string>
    <string name="heading">Improve Your Maths Skills</string>
    <string name="guide">Select Difficulty &amp; Operation to Play 🤓</string>
    <string name="empty_txt" />
    <string name="cancel">Cancel</string>
    <string name="application_name">Mathwiz</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="difficulty1">Easy  (4 min)</string>
    <string name="difficulty2">Medium  (2 min)</string>
    <string name="difficulty3">Hard  (1 min)</string>
    <string name="select_op">Select Operation</string>
    <string name="operator1">Addition</string>
    <string name="operator2">Subtraction</string>
    <string name="operator3">Multiplication</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="score">Score: 0</string>
    <string name="display_score">Your Score:</string>
    <string name="winner_image">winner image</string>
    <string name="high_score">High Score:</string>
    <string name="try_again">Try Again</string>
    <string name="quiz_count">Quiz Count:</string>
    <string name="time_expired">Time’s up 🙂</string>
    <string name="wrong_answers">Wrong Answers:</string>
</resources>