<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_100"
    tools:context=".ScoreScreen">

    <RelativeLayout
        android:layout_width="406dp"
        android:layout_height="633dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="392dp"
            android:layout_height="507dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/win_tab">

            <TextView
                android:id="@+id/txt_wrong_count"
                android:layout_width="293dp"
                android:layout_height="60dp"
                android:layout_marginTop="224dp"
                android:gravity="center"
                android:text="@string/wrong_answers"
                android:textAlignment="gravity"
                android:textColor="@color/black_600"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_quiz_count"
                android:layout_width="293dp"
                android:layout_height="60dp"
                android:layout_marginTop="164dp"
                android:gravity="center"
                android:text="@string/quiz_count"
                android:textAlignment="gravity"
                android:textColor="@color/red_400"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_high_score"
                android:layout_width="316dp"
                android:layout_height="54dp"
                android:layout_marginTop="352dp"
                android:gravity="center"
                android:text="@string/high_score"
                android:textAlignment="gravity"
                android:textColor="@color/text_700"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_current_score"
                android:layout_width="293dp"
                android:layout_height="60dp"
                android:layout_marginTop="104dp"
                android:gravity="center"
                android:text="@string/display_score"
                android:textAlignment="gravity"
                android:textColor="@color/red_400"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="76dp"
            android:contentDescription="@string/winner_image"
            app:srcCompat="@drawable/winner" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="224dp"
        android:layout_height="58dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/yellow_600"
        android:text="@string/try_again"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>