<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_page_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_100"
    tools:context=".QuizPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="375dp"
        android:layout_height="117dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/question_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_display_quiz"
            android:layout_width="334dp"
            android:layout_height="110dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="17dp"
            android:gravity="center"
            android:text="@string/empty_txt"
            android:textAlignment="gravity"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="413dp"
        android:layout_height="401dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_ans1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/answer_button_state"
            android:text=""
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_ans2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/answer_button_state"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn_ans1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_ans3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/answer_button_state"
            android:clickable="true"
            android:text=""
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_ans1"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_ans4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/answer_button_state"
            android:text=""
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_ans2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/yellow_600"
        android:text="@string/next"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="412dp"
        android:layout_height="92dp"
        android:background="@color/blue_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="173dp"
            android:layout_height="46dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/blue_300"
            android:text="@string/score"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_home"
            style="@style/Widget.Material3.Button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_btn_background"
            android:textColorLink="@color/blue_300"
            app:icon="@mipmap/home_icon_foreground"
            app:iconGravity="top"
            app:iconSize="64dp"
            app:iconTintMode="multiply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="409dp"
        android:layout_height="65dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/custom_btn_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_timer"
            android:layout_width="108dp"
            android:layout_height="33dp"
            android:layout_marginEnd="75dp"
            android:text="@string/empty_txt"
            android:textAlignment="viewStart"
            android:textColor="@color/text_700"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/clockgif"
            app:layout_constraintTop_toTopOf="parent" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/clockgif"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:layout_marginStart="105dp"
            android:adjustViewBounds="true"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/clock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>